remove comments and unused files

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ a {
 
 .gallery-link:hover {
   transform: scale(1.04);
-  cursor: url('../img/bxs_hand-down.svg'), auto;
+  cursor: url('../img/hand-down.svg'), auto;
 }
 
 .gallery-link img {
